# accordion_task

./: Cargo.toml  README.md
examples/: test
src/: app.rs  cli.rs  config.rs  event.rs  main.rs  routine.rs  ui.rs  update.rs
src/app/: flex.rs  list_pointer.rs  logging.rs  parse_routine.rs  static_task.rs
src/routine/: flex.rs  parse.rs  parse_routine.rs  task.rs
src/routine/task/: parse_new.rs  parse_new_task.rs
